package NYT.NTransactionClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/core/ytree/attributes.proto";
import "yt/ytlib/transaction_client/action.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartTransaction
{
    optional NYT.NYTree.NProto.TAttributes attributes = 1;
    optional NYT.NProto.TGuid parent_id = 2;
    required int64 timeout = 5;
    // Deprecated = 3;
    optional string title = 4;
}

message TRspStartTransaction
{
    required NYT.NProto.TGuid id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRegisterTransactionActions
{
    required NYT.NProto.TGuid transaction_id = 1;
    repeated NYT.NTransactionClient.NProto.TTransactionActionData actions = 2;
}

message TRspRegisterTransactionActions
{ }

////////////////////////////////////////////////////////////////////////////////
